hphp/test/slow/enum-invalid-base/maybe_bool.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/maybe_bool.php on line 3
